[gd_scene load_steps=6 format=3 uid="uid://10y41hjhegda"]

[ext_resource type="Script" uid="uid://vip2brf5doho" path="res://Scripts/disclaimer.gd" id="1_udgjn"]
[ext_resource type="Texture2D" uid="uid://cnpenxqkyeo1q" path="res://Sprites/Gizmos/Door.png" id="2_hv6v3"]
[ext_resource type="FontFile" uid="uid://dw3bs4aaneafm" path="res://Sprites/Font.png" id="3_pnt3a"]
[ext_resource type="AudioStream" uid="uid://wtfevwtnjce" path="res://Audio/Sfx/Coin.wav" id="4_2q725"]
[ext_resource type="AudioStream" uid="uid://lfisbsa8gxlh" path="res://Audio/Sfx/Hit.wav" id="5_ootmr"]

[node name="Disclaimer" type="Node2D"]
script = ExtResource("1_udgjn")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1386, -414.2)
scale = Vector2(87.135, 87.135)
texture = ExtResource("2_hv6v3")

[node name="DisclaimerWarning" type="Label" parent="."]
offset_left = -44.0
offset_top = -92.0
offset_right = 44.0
offset_bottom = -69.0
theme_override_colors/font_color = Color(0.96862745, 0.22352941, 0.0627451, 1)
theme_override_fonts/font = ExtResource("3_pnt3a")
theme_override_font_sizes/font_size = 8
text = "disclaimer!"

[node name="DisclaimerText" type="Label" parent="."]
offset_left = -128.0
offset_top = -60.0
offset_right = 128.0
offset_bottom = 79.0
theme_override_fonts/font = ExtResource("3_pnt3a")
theme_override_font_sizes/font_size = 8
text = "this is a work in progress
fangame

this is being worked on by
itsvorzo, bluegweenie
and trippy

please be pantient
while we work hard on this

also, if you want to help with
this game, please dm vorzo :)"
horizontal_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -11)
zoom = Vector2(3, 3)

[node name="DisclaimerWarningShow" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_2q725")
autoplay = true
bus = &"SFX"

[node name="DisclaimerTextShow" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ootmr")
bus = &"SFX"
